Bug 262485 - Triggering window grid again before it is completely gone leaves panels visible
Summary: Triggering window grid again before it is completely gone leaves panels visible
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-window-management (other bugs)
Version First Reported In: git master
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 266364 293332 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-08 03:05 UTC by Kai Uwe Broulik
Modified: 2012-02-04 23:24 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.65 KB, text/plain)
2011-05-08 23:05 UTC, omega
Details
New crash information added by DrKonqi (3.20 KB, text/plain)
2011-08-21 13:48 UTC, Mathias Panzenböck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-01-08 03:05:36 UTC
Version:           SVN (using KDE 4.5.95) 
OS:                Linux

Normally the panels hide when triggering the Present Window Grid. When closing the grid using Escape and then pressing the keystroke again before all the windows have regained their original position again opens the present window grid but leaves the panels visible.

Reproducible: Always
Comment 1 Thomas Lübking 2011-01-08 14:53:27 UTC
confirmed, the visibility status needs to be reset regardless in the activation code.

updated the general codefix patch:
http://svn.reviewboard.kde.org/r/5762/
Comment 2 omega 2011-03-07 22:24:01 UTC
*** Bug 266364 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Lübking 2011-04-03 23:37:16 UTC
Git commit ab48eaf962c6274744ed88c9c9f4cbe1bce7fdea by Thomas Lübking.
Committed on 08/03/2011 at 00:19.
Pushed by luebking into branch 'master'.

Strip QHash::operator[] from present window effect

also rewrite of the regular grid assignment - was
a) a suboptimal implementation
b) required because otherwise broken in desktopgrid proxy mode (which btw. polluted the effect through QHash::operator[])

BUG:262485

M  +252  -235  kwin/effects/presentwindows/presentwindows.cpp     
M  +0    -4    kwin/effects/presentwindows/presentwindows.h     

http://commits.kde.org/kde-workspace/ab48eaf962c6274744ed88c9c9f4cbe1bce7fdea
Comment 4 Martin Flöser 2011-04-13 20:38:33 UTC
*** Bug 270872 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Lübking 2011-04-13 21:52:40 UTC
setting fix version
Comment 6 Thomas Lübking 2011-04-13 21:54:52 UTC
notice that #266364 is NOT necessarily a dupe, set by reporter on a wild guess of mine. needs verification.
Comment 7 omega 2011-05-08 23:05:29 UTC
Created attachment 59782 [details]
New crash information added by DrKonqi

kwin (4.6.3 (4.6.3)) on KDE Platform 4.6.3 (4.6.3) using Qt 4.7.2

- What I was doing when the application crashed:

when i use present window effect and i click on kickoff menu, i have this error

-- Backtrace (Reduced):
#6  KWin::CloseWindowView::hide (this=0x0) at ../../../kwin/effects/presentwindows/presentwindows.cpp:2096
#7  0x00007f91a534a2dc in KWin::PresentWindowsEffect::setHighlightedWindow (this=0x1bfbcb0, w=0x0) at ../../../kwin/effects/presentwindows/presentwindows.cpp:1776
#8  0x00007f91a5355f63 in KWin::PresentWindowsEffect::windowClosed (this=0x1bfbcb0, w=0x3851cd0) at ../../../kwin/effects/presentwindows/presentwindows.cpp:424
#9  0x00007f91bfafb437 in KWin::EffectsHandlerImpl::windowClosed (this=<value optimized out>, c=0x3851cd0) at ../../kwin/effects.cpp:322
#10 0x00007f91bfa6ac2d in KWin::Client::releaseWindow (this=0x362f040, on_shutdown=false) at ../../kwin/client.cpp:238
Comment 8 Mathias Panzenböck 2011-08-21 13:48:42 UTC
Created attachment 63025 [details]
New crash information added by DrKonqi

kwin (4.6.5 (4.6.5)) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.3

- What I was doing when the application crashed:

I moved the mouse to the upper left corner, which triggers the present windows effect. I think at the very same moment a new window did show up.

-- Backtrace (Reduced):
#6  KWin::CloseWindowView::hide (this=0x0) at /usr/src/debug/kdebase-workspace-4.6.5/kwin/effects/presentwindows/presentwindows.cpp:2096
#7  0x00007f611100a7ec in KWin::PresentWindowsEffect::setHighlightedWindow (this=0x191e210, w=0x1a9db80) at /usr/src/debug/kdebase-workspace-4.6.5/kwin/effects/presentwindows/presentwindows.cpp:1776
#8  0x00007f61110168b3 in KWin::PresentWindowsEffect::windowClosed (this=0x191e210, w=0x1cfafb0) at /usr/src/debug/kdebase-workspace-4.6.5/kwin/effects/presentwindows/presentwindows.cpp:424
#9  0x00007f612d076a57 in KWin::EffectsHandlerImpl::windowClosed (this=<value optimized out>, c=0x1cfafb0) at /usr/src/debug/kdebase-workspace-4.6.5/kwin/effects.cpp:322
#10 0x00007f612cfe5fed in KWin::Client::releaseWindow (this=0x1cfdf20, on_shutdown=false) at /usr/src/debug/kdebase-workspace-4.6.5/kwin/client.cpp:238
Comment 9 Thomas Lübking 2012-02-04 23:24:10 UTC
*** Bug 293332 has been marked as a duplicate of this bug. ***